# nerfstudio_playground

./: .gitignore  README.md  pyproject.toml
nfst/configs/: mipnerf360.py  mipnerf360_data.py
nfst/dataparsers/: mipnerf360.py  mipnerf360_dataparser.py
nfst/models/: mipnerf360.py
scripts/: benchmark_mipnerf360data.py
